--- a/localization/en-US.json
+++ b/localization/en-US.json
@@ -1,30 +1,31 @@
 {
 	"en-US": {
-		"alert_about": "This shortcut generates and updates the Shortcuts database in {{LAUNCHCUTS}}. This requires {{LAUNCHCUTS}} for iOS.",
-		"alert_generate": "{{COUNT}} shortcuts will be processed. ",
-		"alert_generate_progress": "{{PERCENTAGE}}% complete. {{NUM}} out of {{COUNT}} shortcuts have been processed in {{DURATION}} seconds.",
-		"alert_generate_title": "Generating shortcuts database for {{LAUNCHCUTS}}",
-		"alert_shortcuts_map": "Generating the shortcuts map of {{COUNT}} shortcuts will take about {{TIME}} minutes to complete. ",
-		"alert_update_none": "You are running the latest version of {{APPNAME}}.",
+		"alert_about": "This shortcut generates and updates the Shortcuts database in __LAUNCHCUTS__.",
+		"alert_generate": "__COUNT__ shortcuts will be processed. ",
+		"alert_generate_progress": "__PERCENTAGE__% complete. __NUM__ out of __COUNT__ shortcuts have been processed in __DURATION__ seconds.",
+		"alert_generate_title": "Generating shortcuts database for __LAUNCHCUTS__",
+		"alert_shortcuts_map": "Generating the shortcuts database of __COUNT__ shortcuts will take about __TIME__ minutes to complete.",
+		"alert_update_none": "You are running the latest version of __APPNAME__.",
 		"label_backup_filename": "shortcuts-backup",
 		"menu_about": "About…",
 		"menu_back": "Back",
 		"menu_help": "Help…",
 		"menu_language": "Change Language…",
-		"menu_launchcuts_get": "Get {{LAUNCHCUTS}}…",
-		"menu_launchcuts_open": "Open {{LAUNCHCUTS}}",
+		"menu_launchcuts_get": "Get __LAUNCHCUTS__…",
+		"menu_launchcuts_open": "Open __LAUNCHCUTS__",
 		"menu_quit": "Quit",
 		"menu_settings": "Settings",
 		"menu_update": "Check for Updates…",
 		"menu_update_later": "Update Later",
 		"menu_update_now": "Update Now…",
 		"menu_updateShortcuts": "Update Shortcuts…",
-		"menu_updateShortcuts_full": "Full Update",
-		"menu_updateShortcuts_quick": "Quick Update",
-		"menu_updateShortcuts_selected": "Selected Shortcuts",
+		"menu_updateShortcuts_full": "Comprehensive",
+		"menu_updateShortcuts_quick": "Quick",
+		"menu_updateShortcuts_selected": "Selected",
 		"prompt_settings": "Settings",
 		"prompt_shortcuts": "Choose Shortcuts:",
-		"prompt_update": "{{APPNAME}} version {{VERSION}} is available. Would you like to download it now?\n\nRelease Notes\n\n{{NOTES}}",
-		"prompt_updateShortcuts": "Update the database of shortcuts in {{LAUNCHCUTS}}."
+		"prompt_update": "__APPNAME__ version __VERSION__ is available. Would you like to download it now?\n\nRelease Notes\n\n__NOTES__",
+		"prompt_updateFull": "Rebuild Shortcuts Database",
+		"prompt_updateShortcuts": "Update the database of shortcuts in __LAUNCHCUTS__."
 	}
 }
