LaunchCuts Helper localizations

--- a/localization/en-US.json
+++ b/localization/en-US.json
@@ -7,6 +7,8 @@
 		"alert_shortcuts_map": "Generating the shortcuts database of __COUNT__ shortcuts will take about __TIME__ minutes to complete.",
 		"alert_update_none": "You are running the latest version of __APPNAME__.",
 		"label_backup_filename": "shortcuts-backup",
+		"language_key": "en-US",
+		"language_name": "English",
 		"menu_about": "About…",
 		"menu_back": "Back",
 		"menu_help": "Help…",
@@ -22,6 +24,7 @@
 		"menu_updateShortcuts_full": "Comprehensive",
 		"menu_updateShortcuts_quick": "Quick",
 		"menu_updateShortcuts_selected": "Selected",
+		"prompt_language": "Select Language:",
 		"prompt_settings": "Settings",
 		"prompt_shortcuts": "Choose Shortcuts:",
 		"prompt_update": "__APPNAME__ version __VERSION__ is available. Would you like to download it now?\n\nRelease Notes\n\n__NOTES__",
