--- a/localization/all-localizations.json
+++ b/localization/all-localizations.json
@@ -20,6 +20,7 @@
 		"menu_update": "التحقق من وجود تحديثات...",
 		"menu_updateShortcuts": "تحديث الاختصارات...",
 		"menu_updateShortcuts_full": "شامله",
+		"menu_updateShortcuts_quick": "سريعه",
 		"menu_updateShortcuts_selected": "المحدد",
 		"menu_update_later": "التحديث لاحقا",
 		"menu_update_now": "التحديث الآن...",
