Update Russian Localization
Thanks to Konstantin Bezgodkov

--- a/localization/ru-RU.json
+++ b/localization/ru-RU.json
@@ -1,34 +1,34 @@
 {
 	"ru-RU": {
-		"alert_about": "Этот ярлык генерирует и обновляет базу данных Shortcuts в __LAUNCHCUTS__.",
-		"alert_generate": "__COUNT__ будут обработаны ярлыки. ",
-		"alert_generate_progress": "__PERCENTAGE__% завершено. __NUM__ из __COUNT__ ярлыков были обработаны в __DURATION__ секунд.",
-		"alert_generate_title": "Создание базы данных ярлыков для __LAUNCHCUTS__",
-		"alert_shortcuts_map": "Создание базы данных ярлыков __COUNT__ ярлыков займет около __TIME__ минут.",
-		"alert_update_none": "Вы работаете последнюю версию __APPNAME__.",
-		"label_backup_filename": "ярлыки резервного копирования",
+		"alert_about": "Эта команда генерирует и обновляет базу данных Команд в __LAUNCHCUTS__.",
+		"alert_generate": "__COUNT__ команд будет обработано.",
+		"alert_generate_progress": "__PERCENTAGE__% завершено. __NUM__ из __COUNT__ команд были обработаны за __DURATION__ секунд.",
+		"alert_generate_title": "Создание базы данных команд для __LAUNCHCUTS__",
+		"alert_shortcuts_map": "Создание базы данных из __COUNT__ команд займет около __TIME__ минут.",
+		"alert_update_none": "Вы используете последнюю версию __APPNAME__.",
+		"label_backup_filename": "резервное копирование команд",
 		"language_key": "ru-RU",
 		"language_name": "Русский",
-		"menu_about": "О...",
+		"menu_about": "О команде...",
 		"menu_back": "Назад",
 		"menu_help": "Справка...",
-		"menu_language": "Изменение языка...",
-		"menu_launchcuts_get": "Получить __LAUNCHCUTS__ ...",
-		"menu_launchcuts_open": "Открытый __LAUNCHCUTS__",
-		"menu_quit": "Бросить",
-		"menu_settings": "Параметры",
-		"menu_update": "Проверка на наличие обновлений...",
-		"menu_updateShortcuts": "Обновление ярлыков...",
-		"menu_updateShortcuts_full": "Всеобъемлющего",
-		"menu_updateShortcuts_quick": "Быстрый",
-		"menu_updateShortcuts_selected": "Выбранного",
-		"menu_update_later": "Обновление позже",
+		"menu_language": "Сменить язык...",
+		"menu_launchcuts_get": "Скачать __LAUNCHCUTS__ ...",
+		"menu_launchcuts_open": "Открыть __LAUNCHCUTS__",
+		"menu_quit": "Завершить",
+		"menu_settings": "Настройки",
+		"menu_update": "Проверить обновления...",
+		"menu_updateShortcuts": "Обновить команды...",
+		"menu_updateShortcuts_full": "Все",
+		"menu_updateShortcuts_quick": "Быстро",
+		"menu_updateShortcuts_selected": "Выбранные",
+		"menu_update_later": "Обновить позже",
 		"menu_update_now": "Обновить сейчас...",
 		"prompt_language": "Выберите язык:",
-		"prompt_settings": "Параметры",
-		"prompt_shortcuts": "Выберите ярлыки:",
-		"prompt_update": "__APPNAME__ доступна __VERSION__ версии. Хотите скачать его сейчас?\n\nЗаметки о выпуске\n\n__NOTES__",
-		"prompt_updateFull": "Перестроить базу данных ярлыков",
-		"prompt_updateShortcuts": "Обновление базы данных ярлыков в __LAUNCHCUTS__."
-	}
+		"prompt_settings": "Настройки",
+		"prompt_shortcuts": "Выберите команды:",
+		"prompt_update": "Доступна __VERSION__ версия для __APPNAME__. Хотите скачать ее сейчас?\n\nПатчноут\n\n__NOTES__",
+		"prompt_updateFull": "Перестроить базу данных команд",
+		"prompt_updateShortcuts": "Обновить базу данных команд в __LAUNCHCUTS__."
+	},
 }
