--- a/localization/tr-TR.json
+++ b/localization/tr-TR.json
@@ -1,34 +1,34 @@
 {
 	"tr-TR": {
-		"alert_about": "Bu kısayol, __LAUNCHCUTS__'da Kısayollar veritabanını oluşturur ve güncelleştirir.",
-		"alert_generate": "__COUNT__ kısayolları işlenir. ",
-		"alert_generate_progress": "%__PERCENTAGE__ tamamlandı. __COUNT__ kestirme __NUM__ __DURATION__ saniye içinde işlendi.",
-		"alert_generate_title": "__LAUNCHCUTS__ için kısayollar veritabanı oluşturma",
-		"alert_shortcuts_map": "__COUNT__ kısayollarının kısayollar veritabanını oluşturmanın tamamlanması yaklaşık __TIME__ dakika sürer.",
-		"alert_update_none": "__APPNAME__'in en son sürümünü çalıştırıyorsun.",
-		"label_backup_filename": "kısayollar yedekleme",
+		"alert_about": "Bu kestirme, __LAUNCHCUTS__'da Kestirmeler veritabanını oluşturur ve güncelleştirir.",
+		"alert_generate": "__COUNT__ adet kestirme işlenecektir. ",
+		"alert_generate_progress": "%__PERCENTAGE__ tamamlandı. __COUNT__ adetten __NUM__ adet kestirme __DURATION__ saniye içinde işlendi.",
+		"alert_generate_title": "__LAUNCHCUTS__ için kestirme veritabanı oluşturma",
+		"alert_shortcuts_map": "__COUNT__ adet kestirmenin veritabana eklenmesi yaklaşık __TIME__ dakika sürer.",
+		"alert_update_none": "__APPNAME__'ın en son sürümünü kullanıyorsunuz.",
+		"label_backup_filename": "kestimeleri yedekleme",
 		"language_key": "tr-TR",
-		"language_name": "Turkish",
-		"menu_about": "Hakkı -nda...",
+		"language_name": "Türkçe",
+		"menu_about": "Hakkında...",
 		"menu_back": "Geri",
 		"menu_help": "Yardım...",
 		"menu_language": "Dili Değiştir...",
-		"menu_launchcuts_get": "__LAUNCHCUTS__ alın...",
-		"menu_launchcuts_open": "Açık __LAUNCHCUTS__",
-		"menu_quit": "Bırak",
+		"menu_launchcuts_get": "__LAUNCHCUTS__ indirin...",
+		"menu_launchcuts_open": "__LAUNCHCUTS__ aç",
+		"menu_quit": "Çık",
 		"menu_settings": "Ayarlar",
 		"menu_update": "Güncellemeleri kontrol edin...",
-		"menu_updateShortcuts": "Kısayolları Güncelleştir...",
-		"menu_updateShortcuts_full": "Kapsamlı",
+		"menu_updateShortcuts": "Kestimeleri Güncelleştir...",
+		"menu_updateShortcuts_full": "Tam",
 		"menu_updateShortcuts_quick": "Hızlı",
-		"menu_updateShortcuts_selected": "Seçili",
+		"menu_updateShortcuts_selected": "Seçilen",
 		"menu_update_later": "Daha Sonra Güncelleştir",
 		"menu_update_now": "Şimdi Güncelleştir...",
 		"prompt_language": "Dil Seçiniz:",
 		"prompt_settings": "Ayarlar",
-		"prompt_shortcuts": "Kısayolları seçin:",
-		"prompt_update": "__APPNAME__ sürüm __VERSION__ mevcuttur. Şimdi indirmek ister misiniz?\n\nYayın Notları\n\n__NOTES__",
-		"prompt_updateFull": "Kısayollar Veritabanını Yeniden Oluşturma",
-		"prompt_updateShortcuts": "__LAUNCHCUTS__'daki kısayolların veritabanını güncelleştirin."
+		"prompt_shortcuts": "Kestirmeleri seçin:",
+		"prompt_update": "__APPNAME__ için __VERSION__ sürümü mevcuttur. Şimdi indirmek ister misiniz?\n\nSürüm Notları\n\n__NOTES__",
+		"prompt_updateFull": "Kestimeler Veritabanını Yeniden Oluşturma",
+		"prompt_updateShortcuts": "__LAUNCHCUTS__'daki kestirmeler veritabanını güncelleştir."
 	}
 }
