--- a/localization/all-localizations.json
+++ b/localization/all-localizations.json
@@ -672,36 +672,36 @@
 		"prompt_updateShortcuts": "Actualizați baza de date a comenzilor rapide din __LAUNCHCUTS__."
 	},
 	"ru-RU": {
-		"alert_about": "Этот ярлык генерирует и обновляет базу данных Shortcuts в __LAUNCHCUTS__.",
-		"alert_generate": "__COUNT__ будут обработаны ярлыки. ",
-		"alert_generate_progress": "__PERCENTAGE__% завершено. __NUM__ из __COUNT__ ярлыков были обработаны в __DURATION__ секунд.",
-		"alert_generate_title": "Создание базы данных ярлыков для __LAUNCHCUTS__",
-		"alert_shortcuts_map": "Создание базы данных ярлыков __COUNT__ ярлыков займет около __TIME__ минут.",
-		"alert_update_none": "Вы работаете последнюю версию __APPNAME__.",
-		"label_backup_filename": "ярлыки резервного копирования",
+		"alert_about": "Эта команда генерирует и обновляет базу данных Команд в __LAUNCHCUTS__.",
+		"alert_generate": "__COUNT__ команд будет обработано.",
+		"alert_generate_progress": "__PERCENTAGE__% завершено. __NUM__ из __COUNT__ команд были обработаны за __DURATION__ секунд.",
+		"alert_generate_title": "Создание базы данных команд для __LAUNCHCUTS__",
+		"alert_shortcuts_map": "Создание базы данных из __COUNT__ команд займет около __TIME__ минут.",
+		"alert_update_none": "Вы используете последнюю версию __APPNAME__.",
+		"label_backup_filename": "резервное копирование команд",
 		"language_key": "ru-RU",
 		"language_name": "Русский",
-		"menu_about": "О...",
+		"menu_about": "О команде...",
 		"menu_back": "Назад",
 		"menu_help": "Справка...",
-		"menu_language": "Изменение языка...",
-		"menu_launchcuts_get": "Получить __LAUNCHCUTS__ ...",
-		"menu_launchcuts_open": "Открытый __LAUNCHCUTS__",
-		"menu_quit": "Бросить",
-		"menu_settings": "Параметры",
-		"menu_update": "Проверка на наличие обновлений...",
-		"menu_updateShortcuts": "Обновление ярлыков...",
-		"menu_updateShortcuts_full": "Всеобъемлющего",
-		"menu_updateShortcuts_quick": "Быстрый",
-		"menu_updateShortcuts_selected": "Выбранного",
-		"menu_update_later": "Обновление позже",
+		"menu_language": "Сменить язык...",
+		"menu_launchcuts_get": "Скачать __LAUNCHCUTS__ ...",
+		"menu_launchcuts_open": "Открыть __LAUNCHCUTS__",
+		"menu_quit": "Завершить",
+		"menu_settings": "Настройки",
+		"menu_update": "Проверить обновления...",
+		"menu_updateShortcuts": "Обновить команды...",
+		"menu_updateShortcuts_full": "Все",
+		"menu_updateShortcuts_quick": "Быстро",
+		"menu_updateShortcuts_selected": "Выбранные",
+		"menu_update_later": "Обновить позже",
 		"menu_update_now": "Обновить сейчас...",
 		"prompt_language": "Выберите язык:",
-		"prompt_settings": "Параметры",
-		"prompt_shortcuts": "Выберите ярлыки:",
-		"prompt_update": "__APPNAME__ доступна __VERSION__ версии. Хотите скачать его сейчас?\n\nЗаметки о выпуске\n\n__NOTES__",
-		"prompt_updateFull": "Перестроить базу данных ярлыков",
-		"prompt_updateShortcuts": "Обновление базы данных ярлыков в __LAUNCHCUTS__."
+		"prompt_settings": "Настройки",
+		"prompt_shortcuts": "Выберите команды:",
+		"prompt_update": "Доступна __VERSION__ версия для __APPNAME__. Хотите скачать ее сейчас?\n\nПатчноут\n\n__NOTES__",
+		"prompt_updateFull": "Перестроить базу данных команд",
+		"prompt_updateShortcuts": "Обновить базу данных команд в __LAUNCHCUTS__."
 	},
 	"sk-SK": {
 		"alert_about": "Tento odkaz generuje a aktualizuje databázy skratiek v __LAUNCHCUTS__.",
@@ -800,36 +800,36 @@
 		"prompt_updateShortcuts": "ปรับปรุงฐานข้อมูลของทางลัดใน __LAUNCHCUTS__"
 	},
 	"tr-TR": {
-		"alert_about": "Bu kısayol, __LAUNCHCUTS__'da Kısayollar veritabanını oluşturur ve güncelleştirir.",
-		"alert_generate": "__COUNT__ kısayolları işlenir. ",
-		"alert_generate_progress": "%__PERCENTAGE__ tamamlandı. __COUNT__ kestirme __NUM__ __DURATION__ saniye içinde işlendi.",
-		"alert_generate_title": "__LAUNCHCUTS__ için kısayollar veritabanı oluşturma",
-		"alert_shortcuts_map": "__COUNT__ kısayollarının kısayollar veritabanını oluşturmanın tamamlanması yaklaşık __TIME__ dakika sürer.",
-		"alert_update_none": "__APPNAME__'in en son sürümünü çalıştırıyorsun.",
-		"label_backup_filename": "kısayollar yedekleme",
+		"alert_about": "Bu kestirme, __LAUNCHCUTS__'da Kestirmeler veritabanını oluşturur ve güncelleştirir.",
+		"alert_generate": "__COUNT__ adet kestirme işlenecektir. ",
+		"alert_generate_progress": "%__PERCENTAGE__ tamamlandı. __COUNT__ adetten __NUM__ adet kestirme __DURATION__ saniye içinde işlendi.",
+		"alert_generate_title": "__LAUNCHCUTS__ için kestirme veritabanı oluşturma",
+		"alert_shortcuts_map": "__COUNT__ adet kestirmenin veritabana eklenmesi yaklaşık __TIME__ dakika sürer.",
+		"alert_update_none": "__APPNAME__'ın en son sürümünü kullanıyorsunuz.",
+		"label_backup_filename": "kestimeleri yedekleme",
 		"language_key": "tr-TR",
-		"language_name": "Turkish",
-		"menu_about": "Hakkı -nda...",
+		"language_name": "Türkçe",
+		"menu_about": "Hakkında...",
 		"menu_back": "Geri",
 		"menu_help": "Yardım...",
 		"menu_language": "Dili Değiştir...",
-		"menu_launchcuts_get": "__LAUNCHCUTS__ alın...",
-		"menu_launchcuts_open": "Açık __LAUNCHCUTS__",
-		"menu_quit": "Bırak",
+		"menu_launchcuts_get": "__LAUNCHCUTS__ indirin...",
+		"menu_launchcuts_open": "__LAUNCHCUTS__ aç",
+		"menu_quit": "Çık",
 		"menu_settings": "Ayarlar",
 		"menu_update": "Güncellemeleri kontrol edin...",
-		"menu_updateShortcuts": "Kısayolları Güncelleştir...",
-		"menu_updateShortcuts_full": "Kapsamlı",
+		"menu_updateShortcuts": "Kestimeleri Güncelleştir...",
+		"menu_updateShortcuts_full": "Tam",
 		"menu_updateShortcuts_quick": "Hızlı",
-		"menu_updateShortcuts_selected": "Seçili",
+		"menu_updateShortcuts_selected": "Seçilen",
 		"menu_update_later": "Daha Sonra Güncelleştir",
 		"menu_update_now": "Şimdi Güncelleştir...",
 		"prompt_language": "Dil Seçiniz:",
 		"prompt_settings": "Ayarlar",
-		"prompt_shortcuts": "Kısayolları seçin:",
-		"prompt_update": "__APPNAME__ sürüm __VERSION__ mevcuttur. Şimdi indirmek ister misiniz?\n\nYayın Notları\n\n__NOTES__",
-		"prompt_updateFull": "Kısayollar Veritabanını Yeniden Oluşturma",
-		"prompt_updateShortcuts": "__LAUNCHCUTS__'daki kısayolların veritabanını güncelleştirin."
+		"prompt_shortcuts": "Kestirmeleri seçin:",
+		"prompt_update": "__APPNAME__ için __VERSION__ sürümü mevcuttur. Şimdi indirmek ister misiniz?\n\nSürüm Notları\n\n__NOTES__",
+		"prompt_updateFull": "Kestimeler Veritabanını Yeniden Oluşturma",
+		"prompt_updateShortcuts": "__LAUNCHCUTS__'daki kestirmeler veritabanını güncelleştir."
 	},
 	"zn-CH": {
 		"alert_about": "此快捷方式在 __LAUNCHCUTS__ 生成并更新快捷方式数据库。",
