--- a/localization/en-US.json
+++ b/localization/en-US.json
@@ -4,31 +4,20 @@
 		"alert_generate": "__COUNT__ shortcuts will be processed. ",
 		"alert_generate_progress": "__PERCENTAGE__% complete. __NUM__ out of __COUNT__ shortcuts have been processed in __DURATION__ seconds.",
 		"alert_generate_title": "Generating shortcuts database for __LAUNCHCUTS__",
-		"alert_shortcuts_map": "Generating the shortcuts database of __COUNT__ shortcuts will take about __TIME__ minutes to complete.",
+		"alert_shortcuts_map": "Tap OK to generate the shortcuts database of __COUNT__ shortcuts for __LAUNCHCUTS__.\n\nProgress will be displayed in 10% increments for libraries over 50 shortcuts.",
 		"alert_update_none": "You are running the latest version of __APPNAME__.",
 		"label_backup_filename": "shortcuts-backup",
 		"language_key": "en-US",
 		"language_name": "English",
 		"menu_about": "About…",
-		"menu_back": "Back",
 		"menu_help": "Help…",
-		"menu_language": "Change Language…",
 		"menu_launchcuts_get": "Get __LAUNCHCUTS__…",
 		"menu_launchcuts_open": "Open __LAUNCHCUTS__",
 		"menu_quit": "Quit",
-		"menu_settings": "Settings",
 		"menu_update": "Check for Updates…",
 		"menu_update_later": "Update Later",
 		"menu_update_now": "Update Now…",
-		"menu_updateShortcuts": "Update Shortcuts…",
-		"menu_updateShortcuts_full": "Comprehensive",
-		"menu_updateShortcuts_quick": "Quick",
-		"menu_updateShortcuts_selected": "Selected",
-		"prompt_language": "Select Language:",
-		"prompt_settings": "Settings",
-		"prompt_shortcuts": "Choose Shortcuts:",
 		"prompt_update": "__APPNAME__ version __VERSION__ is available. Would you like to download it now?\n\nRelease Notes\n\n__NOTES__",
-		"prompt_updateFull": "Rebuild Shortcuts Database",
-		"prompt_updateShortcuts": "Update the database of shortcuts in __LAUNCHCUTS__."
+		"prompt_updateFull": "__LAUNCHCUTS__: Full Update"
 	}
 }
