Russian and Turkish translations

--- a/localization/ru-RU.json
+++ b/localization/ru-RU.json
@@ -4,31 +4,20 @@
 		"alert_generate": "__COUNT__ команд будет обработано.",
 		"alert_generate_progress": "__PERCENTAGE__% завершено. __NUM__ из __COUNT__ команд были обработаны за __DURATION__ секунд.",
 		"alert_generate_title": "Создание базы данных команд для __LAUNCHCUTS__",
-		"alert_shortcuts_map": "Создание базы данных из __COUNT__ команд займет около __TIME__ минут.",
+		"alert_shortcuts_map": "Нажмите «ОК» чтобы создать базу данных из __COUNT__ команд для __LAUNCHCUTS__.\n\nПрогресс создания будет отображаться 10%-ми промежутками для библиотек с более чем 50 командами.",
 		"alert_update_none": "Вы используете последнюю версию __APPNAME__.",
 		"label_backup_filename": "резервное копирование команд",
 		"language_key": "ru-RU",
 		"language_name": "Русский",
 		"menu_about": "О команде...",
-		"menu_back": "Назад",
 		"menu_help": "Справка...",
-		"menu_language": "Сменить язык...",
 		"menu_launchcuts_get": "Скачать __LAUNCHCUTS__ ...",
 		"menu_launchcuts_open": "Открыть __LAUNCHCUTS__",
 		"menu_quit": "Завершить",
-		"menu_settings": "Настройки",
 		"menu_update": "Проверить обновления...",
-		"menu_updateShortcuts": "Обновить команды...",
-		"menu_updateShortcuts_full": "Все",
-		"menu_updateShortcuts_quick": "Быстро",
-		"menu_updateShortcuts_selected": "Выбранные",
 		"menu_update_later": "Обновить позже",
 		"menu_update_now": "Обновить сейчас...",
-		"prompt_language": "Выберите язык:",
-		"prompt_settings": "Настройки",
-		"prompt_shortcuts": "Выберите команды:",
 		"prompt_update": "Доступна __VERSION__ версия для __APPNAME__. Хотите скачать ее сейчас?\n\nПатчноут\n\n__NOTES__",
-		"prompt_updateFull": "Перестроить базу данных команд",
-		"prompt_updateShortcuts": "Обновить базу данных команд в __LAUNCHCUTS__."
+		"prompt_updateFull": "Перестроить базу данных команд"
 	}
 }
