--- a/localization/tr-TR.json
+++ b/localization/tr-TR.json
@@ -4,31 +4,20 @@
 		"alert_generate": "__COUNT__ adet kestirme işlenecektir. ",
 		"alert_generate_progress": "%__PERCENTAGE__ tamamlandı. __COUNT__ adetten __NUM__ adet kestirme __DURATION__ saniye içinde işlendi.",
 		"alert_generate_title": "__LAUNCHCUTS__ için kestirme veritabanı oluşturma",
-		"alert_shortcuts_map": "__COUNT__ adet kestirmenin veritabana eklenmesi yaklaşık __TIME__ dakika sürer.",
+		"alert_shortcuts_map": "__COUNT__ adet kestirmeden __LAUNCHCUTS__ için veritabanı oluşturmak için “OK” tuşuna basın.\n\n50’den fazla kestirme içeren kütüphaneler için işlem durumu %10’luk dilimlerde gösterilecek.",
 		"alert_update_none": "__APPNAME__'ın en son sürümünü kullanıyorsunuz.",
 		"label_backup_filename": "kestimeleri yedekleme",
 		"language_key": "tr-TR",
 		"language_name": "Türkçe",
 		"menu_about": "Hakkında...",
-		"menu_back": "Geri",
 		"menu_help": "Yardım...",
-		"menu_language": "Dili Değiştir...",
 		"menu_launchcuts_get": "__LAUNCHCUTS__ indirin...",
 		"menu_launchcuts_open": "__LAUNCHCUTS__ aç",
 		"menu_quit": "Çık",
-		"menu_settings": "Ayarlar",
 		"menu_update": "Güncellemeleri kontrol edin...",
-		"menu_updateShortcuts": "Kestimeleri Güncelleştir...",
-		"menu_updateShortcuts_full": "Tam",
-		"menu_updateShortcuts_quick": "Hızlı",
-		"menu_updateShortcuts_selected": "Seçilen",
 		"menu_update_later": "Daha Sonra Güncelleştir",
 		"menu_update_now": "Şimdi Güncelleştir...",
-		"prompt_language": "Dil Seçiniz:",
-		"prompt_settings": "Ayarlar",
-		"prompt_shortcuts": "Kestirmeleri seçin:",
 		"prompt_update": "__APPNAME__ için __VERSION__ sürümü mevcuttur. Şimdi indirmek ister misiniz?\n\nSürüm Notları\n\n__NOTES__",
-		"prompt_updateFull": "Kestimeler Veritabanını Yeniden Oluşturma",
-		"prompt_updateShortcuts": "__LAUNCHCUTS__'daki kestirmeler veritabanını güncelleştir."
+		"prompt_updateFull": "Kestimeler Veritabanını Yeniden Oluşturma"
 	}
 }
