Updated localization for LaunchCuts Helper.

--- a/localization/da-DK.json
+++ b/localization/da-DK.json
@@ -4,31 +4,20 @@
 		"alert_generate": "__COUNT__ genveje vil blive behandlet. ",
 		"alert_generate_progress": "__PERCENTAGE__% fuldført. __NUM__ af __COUNT__ genveje er blevet behandlet på __DURATION__ sekunder.",
 		"alert_generate_title": "Genererer genveje database til __LAUNCHCUTS__",
-		"alert_shortcuts_map": "Generering af genveje database af __COUNT__ genveje vil tage omkring __TIME__ minutter at fuldføre.",
+		"alert_shortcuts_map": "Tryk på OK for at generere genveje-databasen med __COUNT__ genveje til __LAUNCHCUTS__.\n\nFremskridt vil blive vist i 10% intervaller for biblioteker over 50 genveje.",
 		"alert_update_none": "Du kører den nyeste version af __APPNAME__.",
 		"label_backup_filename": "genveje-backup",
 		"language_key": "da-DK",
 		"language_name": "Danish",
 		"menu_about": "Om...",
-		"menu_back": "Tilbage",
 		"menu_help": "Hjælp...",
-		"menu_language": "Skift sprog...",
 		"menu_launchcuts_get": "Få __LAUNCHCUTS__...",
 		"menu_launchcuts_open": "Åbne __LAUNCHCUTS__",
 		"menu_quit": "Afslutte",
-		"menu_settings": "Indstillinger",
 		"menu_update": "Søg efter opdateringer...",
-		"menu_updateShortcuts": "Opdater genveje...",
-		"menu_updateShortcuts_full": "Omfattende",
-		"menu_updateShortcuts_quick": "Hurtig",
-		"menu_updateShortcuts_selected": "Valgte",
 		"menu_update_later": "Opdater senere",
 		"menu_update_now": "Opdater nu...",
-		"prompt_language": "Vælg sprog:",
-		"prompt_settings": "Indstillinger",
-		"prompt_shortcuts": "Vælg genveje:",
 		"prompt_update": "__APPNAME__ version __VERSION__ er tilgængelig. Vil du downloade den nu?\n\nUdgivelsesbemærkningerne\n\n__NOTES__",
-		"prompt_updateFull": "Gendan genveje database",
-		"prompt_updateShortcuts": "Opdater databasen med genveje i __LAUNCHCUTS__."
+		"prompt_updateFull": "__LAUNCHCUTS__: fuld opdatering"
 	}
 }
