--- a/localization/de-DE.json
+++ b/localization/de-DE.json
@@ -4,31 +4,20 @@
 		"alert_generate": "__COUNT__ Verknüpfungen werden verarbeitet. ",
 		"alert_generate_progress": "__PERCENTAGE__% abgeschlossen. __NUM__ von __COUNT__ Verknüpfungen wurden in __DURATION__ Sekunden verarbeitet.",
 		"alert_generate_title": "Generieren von Verknüpfungsdatenbanken für __LAUNCHCUTS__",
-		"alert_shortcuts_map": "Das Generieren der Verknüpfungsdatenbank __COUNT__ Verknüpfungen dauert etwa __TIME__ Minuten.",
+		"alert_shortcuts_map": "Tippen Sie auf OK, um die Verknüpfungsdatenbank mit __COUNT__ Verknüpfungen für __LAUNCHCUTS__ zu generieren.\n\nDer Fortschritt wird in 10%-Schritten für Bibliotheken über 50 Verknüpfungen angezeigt.",
 		"alert_update_none": "Sie führen die neueste Version von __APPNAME__ aus.",
 		"label_backup_filename": "Shortcuts-Backup",
 		"language_key": "de-DE",
 		"language_name": "Deutsch",
 		"menu_about": "Über...",
-		"menu_back": "Zurück",
 		"menu_help": "Hilfe...",
-		"menu_language": "Sprache ändern...",
 		"menu_launchcuts_get": "Holen Sie sich __LAUNCHCUTS__...",
 		"menu_launchcuts_open": "Offene __LAUNCHCUTS__",
 		"menu_quit": "Beenden",
-		"menu_settings": "Einstellungen",
 		"menu_update": "Auf Updates suchen...",
-		"menu_updateShortcuts": "Shortcuts aktualisieren...",
-		"menu_updateShortcuts_full": "Umfassende",
-		"menu_updateShortcuts_quick": "Schnelle",
-		"menu_updateShortcuts_selected": "Ausgewählten",
 		"menu_update_later": "Aktualisierung später",
 		"menu_update_now": "Jetzt aktualisieren...",
-		"prompt_language": "Wählen Sie Sprache:",
-		"prompt_settings": "Einstellungen",
-		"prompt_shortcuts": "Wählen Sie Verknüpfungen:",
 		"prompt_update": "__APPNAME__ Version __VERSION__ ist verfügbar. Möchten Sie es jetzt herunterladen?\n\nVersionshinweise\n\n__NOTES__",
-		"prompt_updateFull": "Shortcuts-Datenbank neu erstellen",
-		"prompt_updateShortcuts": "Aktualisieren Sie die Datenbank der Verknüpfungen in __LAUNCHCUTS__."
+		"prompt_updateFull": "__LAUNCHCUTS__: Vollständiges Update"
 	}
 }
