--- a/localization/es-MX.json
+++ b/localization/es-MX.json
@@ -4,31 +4,20 @@
 		"alert_generate": "__COUNT__ se procesarán los accesos directos. ",
 		"alert_generate_progress": "__PERCENTAGE__% completo. __NUM__ de __COUNT__ accesos directos se han procesado en __DURATION__ segundos.",
 		"alert_generate_title": "Generación de la base de datos de accesos directos para __LAUNCHCUTS__",
-		"alert_shortcuts_map": "La generación de la base de datos de accesos directos de __COUNT__ accesos directos tardará unos __TIME__ minutos en completarse.",
+		"alert_shortcuts_map": "Puntee Aceptar para generar la base de datos de accesos directos de __COUNT__ accesos directos para __LAUNCHCUTS__.\n\nEl progreso se mostrará en incrementos del 10% para las bibliotecas de más de 50 accesos directos.",
 		"alert_update_none": "Está ejecutando la versión más reciente de __APPNAME__.",
 		"label_backup_filename": "shortcuts-backup",
 		"language_key": "es-MX",
 		"language_name": "Español",
 		"menu_about": "acerca de...",
-		"menu_back": "Atrás",
 		"menu_help": "Ayuda...",
-		"menu_language": "Cambiar idioma...",
 		"menu_launchcuts_get": "Obtenga __LAUNCHCUTS__...",
 		"menu_launchcuts_open": "Abrir __LAUNCHCUTS__",
 		"menu_quit": "Dejar",
-		"menu_settings": "Configuración",
 		"menu_update": "Compruebe si hay actualizaciones...",
-		"menu_updateShortcuts": "Actualizar accesos directos...",
-		"menu_updateShortcuts_full": "comprensivo",
-		"menu_updateShortcuts_quick": "Rápido",
-		"menu_updateShortcuts_selected": "Seleccionado",
 		"menu_update_later": "Actualizar más tarde",
 		"menu_update_now": "Actualiza ahora...",
-		"prompt_language": "Elija Idioma:",
-		"prompt_settings": "Configuración",
-		"prompt_shortcuts": "Elija Accesos directos:",
 		"prompt_update": "__APPNAME__ versión __VERSION__ está disponible. ¿Te gustaría descargarlo ahora?\n\nNotas\n\n__NOTES__",
-		"prompt_updateFull": "Volver a crear accesos directos en la base de datos de acceso",
-		"prompt_updateShortcuts": "Actualice la base de datos de accesos directos en __LAUNCHCUTS__."
+		"prompt_updateFull": "__LAUNCHCUTS__: Actualización completa"
 	}
 }
