--- a/localization/fr-FR.json
+++ b/localization/fr-FR.json
@@ -4,31 +4,20 @@
 		"alert_generate": "__COUNT__ raccourcis seront traités. ",
 		"alert_generate_progress": "__PERCENTAGE__% complet. __NUM__ des raccourcis __COUNT__ ont été traités en __DURATION__ secondes.",
 		"alert_generate_title": "Génération de bases de données de raccourcis pour __LAUNCHCUTS__",
-		"alert_shortcuts_map": "La génération de la base de données de raccourcis de __COUNT__ raccourcis prendra environ __TIME__ minutes à compléter.",
+		"alert_shortcuts_map": "Appuyez sur OK pour générer la base de données de raccourcis de __COUNT__ des raccourcis pour __LAUNCHCUTS__.\n\nLes progrès seront affichés par incréments de 10 % pour les bibliothèques de plus de 50 raccourcis.",
 		"alert_update_none": "Vous exécutez la dernière version de __APPNAME__.",
 		"label_backup_filename": "raccourcis-sauvegarde",
 		"language_key": "fr-FR",
 		"language_name": "Français",
 		"menu_about": "Sur...",
-		"menu_back": "Précédent",
 		"menu_help": "Aide...",
-		"menu_language": "Changer la langue...",
 		"menu_launchcuts_get": "Obtenez __LAUNCHCUTS__...",
 		"menu_launchcuts_open": "Ouvert __LAUNCHCUTS__",
 		"menu_quit": "Quitter",
-		"menu_settings": "Paramètres",
 		"menu_update": "Vérifiez les mises à jour...",
-		"menu_updateShortcuts": "Mise à jour des raccourcis...",
-		"menu_updateShortcuts_full": "Complet",
-		"menu_updateShortcuts_quick": "Rapide",
-		"menu_updateShortcuts_selected": "Sélectionné",
 		"menu_update_later": "Mise à jour plus tard",
 		"menu_update_now": "Mettre à jour...",
-		"prompt_language": "Choisissez la langue:",
-		"prompt_settings": "Paramètres",
-		"prompt_shortcuts": "Choisissez des raccourcis :",
 		"prompt_update": "__APPNAME__ version __VERSION__ est disponible. Voulez-vous le télécharger maintenant?\n\nNotes de sortie\n\n__NOTES__",
-		"prompt_updateFull": "Reconstruire la base de données des raccourcis",
-		"prompt_updateShortcuts": "Mettre à jour la base de données des raccourcis dans __LAUNCHCUTS__."
+		"prompt_updateFull": "__LAUNCHCUTS__: Mise à jour complète"
 	}
 }
