--- a/localization/he-IL.json
+++ b/localization/he-IL.json
@@ -4,31 +4,20 @@
 		"alert_generate": "__COUNT__ קיצורי דרך יעובדו. ",
 		"alert_generate_progress": "__PERCENTAGE__% הושלמו. __NUM__ מקיצורי הדרך של __COUNT__ עובדו בתוך __DURATION__ שניות.",
 		"alert_generate_title": "יצירת מסד נתונים של קיצורי דרך עבור __LAUNCHCUTS__",
-		"alert_shortcuts_map": "יצירת מסד הנתונים של קיצורי הדרך של קיצורי הדרך של __COUNT__ ייקח כ-__TIME__ דקות להשלמת.",
+		"alert_shortcuts_map": "הקש על אישור כדי ליצור את מסד הנתונים של קיצורי הדרך של קיצורי __COUNT__ עבור __LAUNCHCUTS__.\n\nההתקדמות תוצג בדרגות של 10% לספריות מעל 50 קיצורי דרך.",
 		"alert_update_none": "אתה מפעיל את הגירסה העדכנית ביותר של __APPNAME__.",
 		"label_backup_filename": "קיצורי דרך-גיבוי",
 		"language_key": "he-IL",
 		"language_name": "Hebrew",
 		"menu_about": ". על...",
-		"menu_back": "חזרה",
 		"menu_help": ". עזור לי",
-		"menu_language": "שינוי שפה...",
 		"menu_launchcuts_get": "! __LAUNCHCUTS__...",
 		"menu_launchcuts_open": "פתח __LAUNCHCUTS__",
 		"menu_quit": "פרוש",
-		"menu_settings": "גדרות",
 		"menu_update": "בדוק אם קיימים עדכונים...",
-		"menu_updateShortcuts": "עדכן קיצורי דרך...",
-		"menu_updateShortcuts_full": "קיף",
-		"menu_updateShortcuts_quick": "מהר",
-		"menu_updateShortcuts_selected": "נבחר",
 		"menu_update_later": "עדכן מאוחר יותר",
 		"menu_update_now": "תעדכן עכשיו...",
-		"prompt_language": "בחר שפה:",
-		"prompt_settings": "גדרות",
-		"prompt_shortcuts": "בחר קיצורי דרך:",
 		"prompt_update": "__APPNAME__ גירסה __VERSION__ זמינה. האם ברצונך להורידו כעת?\n\nהערות שחרור\n\n__NOTES__",
-		"prompt_updateFull": "בנייה מחדש של מסד נתונים של קיצורי דרך",
-		"prompt_updateShortcuts": "עדכן את מסד הנתונים של קיצורי הדרך ב-__LAUNCHCUTS__."
+		"prompt_updateFull": "__LAUNCHCUTS__: עדכון מלא"
 	}
 }
