--- a/localization/hu-HU.json
+++ b/localization/hu-HU.json
@@ -4,31 +4,20 @@
 		"alert_generate": "A program feldolgozza az __COUNT__-hivatkozásokat. ",
 		"alert_generate_progress": "__PERCENTAGE__% kész. Az __COUNT__-hivatkozások __NUM__ __DURATION__ másodperc alatt dolgozták fel.",
 		"alert_generate_title": "Parancsikon-adatbázis létrehozása a __LAUNCHCUTS__ számára",
-		"alert_shortcuts_map": "A __COUNT__ parancsikonok parancsikonjainak létrehozása __TIME__ percet vesz igénybe.",
+		"alert_shortcuts_map": "Az OK gombra koppintva generálja a __LAUNCHCUTS__ __COUNT__ parancsikonjainak parancsikonjait.\n\nAz 50-as gyorsbillentyűkkel elérhető függvénytárak 10%-os lépésekben lesznek láthatók.",
 		"alert_update_none": "Az __APPNAME__ legújabb verzióját futtatja.",
 		"label_backup_filename": "parancsikonok-Backup",
 		"language_key": "hu-HU",
 		"language_name": "Hungarian",
 		"menu_about": "Körülbelül...",
-		"menu_back": "Vissza",
 		"menu_help": "segítség...",
-		"menu_language": "Nyelvváltás...",
 		"menu_launchcuts_get": "Kap __LAUNCHCUTS__...",
 		"menu_launchcuts_open": "__LAUNCHCUTS__ megnyitása",
 		"menu_quit": "Kilép",
-		"menu_settings": "Beállítások",
 		"menu_update": "Frissítések keresése...",
-		"menu_updateShortcuts": "Parancsikonok frissítése...",
-		"menu_updateShortcuts_full": "Átfogó",
-		"menu_updateShortcuts_quick": "Gyors",
-		"menu_updateShortcuts_selected": "Kijelölt",
 		"menu_update_later": "Frissítés később",
 		"menu_update_now": "frissíts most...",
-		"prompt_language": "Nyelv választása:",
-		"prompt_settings": "Beállítások",
-		"prompt_shortcuts": "Válassza ki a parancsikonok:",
 		"prompt_update": "__APPNAME__ __VERSION__ verziója elérhető. Letölti most?\n\nKiadási megjegyzések\n\n__NOTES__",
-		"prompt_updateFull": "Parancsikonok adatbázisának újraépítése",
-		"prompt_updateShortcuts": "Frissítse az adatbázist a parancsikonokat __LAUNCHCUTS__."
+		"prompt_updateFull": "__LAUNCHCUTS__: teljes frissítés"
 	}
 }
