--- a/localization/pt-BR.json
+++ b/localization/pt-BR.json
@@ -4,31 +4,20 @@
 		"alert_generate": "__COUNT__ atalhos serão processados. ",
 		"alert_generate_progress": "__PERCENTAGE__% completo. __NUM__ de atalhos __COUNT__ foram processados em __DURATION__ segundos.",
 		"alert_generate_title": "Geração de atalhos para __LAUNCHCUTS__",
-		"alert_shortcuts_map": "Gerar o banco de dados de atalhos de __COUNT__ atalhos levará cerca de __TIME__ minutos para ser concluído.",
+		"alert_shortcuts_map": "Toque OK para gerar o banco de dados de atalhos de atalhos __COUNT__ para __LAUNCHCUTS__.\n\nO progresso será exibido em incrementos de 10% para bibliotecas com mais de 50 atalhos.",
 		"alert_update_none": "Você está executando a versão mais recente do __APPNAME__.",
 		"label_backup_filename": "atalhos-backup",
 		"language_key": "pt-BR",
 		"language_name": "Portuguese",
 		"menu_about": "Sobre...",
-		"menu_back": "Voltar",
 		"menu_help": "Ajuda...",
-		"menu_language": "Alterar Idioma...",
 		"menu_launchcuts_get": "Pegue __LAUNCHCUTS__...",
 		"menu_launchcuts_open": "Aberto __LAUNCHCUTS__",
 		"menu_quit": "Desistir",
-		"menu_settings": "Configurações",
 		"menu_update": "Verifique se há atualizações...",
-		"menu_updateShortcuts": "Atualização de atalhos...",
-		"menu_updateShortcuts_full": "Abrangente",
-		"menu_updateShortcuts_quick": "Rápido",
-		"menu_updateShortcuts_selected": "Selecionado",
 		"menu_update_later": "Atualização posterior",
 		"menu_update_now": "Atualizar agora...",
-		"prompt_language": "Escolha a língua:",
-		"prompt_settings": "Configurações",
-		"prompt_shortcuts": "Escolha atalhos:",
 		"prompt_update": "__APPNAME__ versão __VERSION__ está disponível. Gostaria de baixá-lo agora?\n\nNotas de lançamento\n\n__NOTES__",
-		"prompt_updateFull": "Reconstruir o banco de dados de atalhos",
-		"prompt_updateShortcuts": "Atualize o banco de dados de atalhos em __LAUNCHCUTS__."
+		"prompt_updateFull": "__LAUNCHCUTS__: Atualização completa"
 	}
 }
