--- a/localization/ro-RO.json
+++ b/localization/ro-RO.json
@@ -4,31 +4,20 @@
 		"alert_generate": "Comenzile rapide __COUNT__ vor fi procesate. ",
 		"alert_generate_progress": "__PERCENTAGE__% complet. __NUM__ din comenzile rapide __COUNT__ au fost procesate în __DURATION__ secunde.",
 		"alert_generate_title": "Generarea de date de comenzi rapide pentru __LAUNCHCUTS__",
-		"alert_shortcuts_map": "Generarea de comenzi rapide de date de comenzi rapide __COUNT__ va dura aproximativ __TIME__ minute pentru a finaliza.",
+		"alert_shortcuts_map": "Atingeți OK pentru a genera baza de date de comenzi rapide de comenzi rapide __COUNT__ pentru __LAUNCHCUTS__.\n\nProgresul va fi afișat în incremente de 10% pentru bibliotecile de peste 50 comenzi rapide.",
 		"alert_update_none": "Executați cea mai recentă versiune de __APPNAME__.",
 		"label_backup_filename": "comenzi rapide-backup",
 		"language_key": "ro-RO",
 		"language_name": "Romanian",
 		"menu_about": "Despre...",
-		"menu_back": "Bck",
 		"menu_help": "ajutor...",
-		"menu_language": "Modificare limbă...",
 		"menu_launchcuts_get": "Obțineți __LAUNCHCUTS__...",
 		"menu_launchcuts_open": "Deschide __LAUNCHCUTS__",
 		"menu_quit": "Renunţe",
-		"menu_settings": "Setări",
 		"menu_update": "Căutare actualizări...",
-		"menu_updateShortcuts": "Actualizare comenzi rapide...",
-		"menu_updateShortcuts_full": "Cuprinzătoare",
-		"menu_updateShortcuts_quick": "Rapid",
-		"menu_updateShortcuts_selected": "Selectat",
 		"menu_update_later": "Actualizare mai târziu",
 		"menu_update_now": "actualizaţi acum...",
-		"prompt_language": "Alege limba:",
-		"prompt_settings": "Setări",
-		"prompt_shortcuts": "Alegeți comenzi rapide:",
 		"prompt_update": "__APPNAME__ versiune __VERSION__ este disponibilă. Doriți să-l Descărcați acum?\n\nNote de lansare\n\n__NOTES__",
-		"prompt_updateFull": "Reconstrui baza de date comenzi rapide",
-		"prompt_updateShortcuts": "Actualizați baza de date a comenzilor rapide din __LAUNCHCUTS__."
+		"prompt_updateFull": "__LAUNCHCUTS__: Full Update"
 	}
 }
