--- a/localization/sk-SK.json
+++ b/localization/sk-SK.json
@@ -4,31 +4,20 @@
 		"alert_generate": "__COUNT__ budú spracované odkazy. ",
 		"alert_generate_progress": "__PERCENTAGE__% dokončené. __NUM__ z __COUNT__ skratiek boli spracované v __DURATION__ sekundách.",
 		"alert_generate_title": "Generuje sa databáza skratiek pre __LAUNCHCUTS__",
-		"alert_shortcuts_map": "Generovanie odkazov databázy __COUNT__ skratky bude trvať asi __TIME__ minút dokončiť.",
+		"alert_shortcuts_map": "Ťuknutím na tlačidlo OK vygenerujte databázu skratiek __COUNT__ skratiek pre __LAUNCHCUTS__.\n\nPokrok sa zobrazí v 10% prírastky pre knižnice viac ako 50 skratiek.",
 		"alert_update_none": "Používate najnovšiu verziu systému __APPNAME__.",
 		"label_backup_filename": "Klávesové skratky-zálohovanie",
 		"language_key": "sk-SK",
 		"language_name": "Slovak",
 		"menu_about": "O...",
-		"menu_back": "Späť",
 		"menu_help": "pomoc...",
-		"menu_language": "Zmeniť jazyk...",
 		"menu_launchcuts_get": "Získať __LAUNCHCUTS__...",
 		"menu_launchcuts_open": "Otvoriť __LAUNCHCUTS__",
 		"menu_quit": "Ukončite",
-		"menu_settings": "Nastavenia",
 		"menu_update": "Vyhľadať aktualizácie...",
-		"menu_updateShortcuts": "Aktualizovať klávesové skratky...",
-		"menu_updateShortcuts_full": "Komplexné",
-		"menu_updateShortcuts_quick": "Rýchle",
-		"menu_updateShortcuts_selected": "Vybrané",
 		"menu_update_later": "Aktualizovať neskôr",
 		"menu_update_now": "aktualizovať teraz...",
-		"prompt_language": "Vyberte jazyk:",
-		"prompt_settings": "Nastavenia",
-		"prompt_shortcuts": "Vyberte skratky:",
 		"prompt_update": "__APPNAME__ verzia __VERSION__ je k dispozícii. Chcete ho teraz prevziať?\n\nVydaniu\n\n__NOTES__",
-		"prompt_updateFull": "Obnoviť databázu skratiek",
-		"prompt_updateShortcuts": "Aktualizujte databázu skratiek v __LAUNCHCUTS__."
+		"prompt_updateFull": "__LAUNCHCUTS__: úplná aktualizácia"
 	}
 }
