--- a/localization/th-TH.json
+++ b/localization/th-TH.json
@@ -4,31 +4,20 @@
 		"alert_generate": "ทางลัด __COUNT__ จะถูกประมวลผล ",
 		"alert_generate_progress": "__PERCENTAGE__% เสร็จสมบูรณ์ __NUM__ ออกจากทางลัด __COUNT__ ได้รับการประมวลผลในเวลา __DURATION__ วินาที",
 		"alert_generate_title": "การสร้างฐานข้อมูลทางลัดสำหรับ __LAUNCHCUTS__",
-		"alert_shortcuts_map": "การสร้างฐานข้อมูลทางลัดของทางลัด __COUNT__ จะใช้เวลาประมาณ __TIME__ นาทีในการทำให้เสร็จสมบูรณ์",
+		"alert_shortcuts_map": "แตะตกลงเพื่อสร้างฐานข้อมูลทางลัดของทางลัด __COUNT__ สำหรับ __LAUNCHCUTS__\n\nความคืบหน้าจะแสดงเป็น10% เพิ่มสำหรับไลบรารีมากกว่า๕๐ทางลัด",
 		"alert_update_none": "คุณกำลังเรียกใช้ __APPNAME__ รุ่นล่าสุด",
 		"label_backup_filename": "ทางลัด-การสำรองข้อมูล",
 		"language_key": "th-TH",
 		"language_name": "Thai",
 		"menu_about": "เกี่ยวกับ",
-		"menu_back": "ย้อนกลับ",
 		"menu_help": "วิธีใช้",
-		"menu_language": "เปลี่ยนภาษา",
 		"menu_launchcuts_get": "รับ __LAUNCHCUTS__ ...",
 		"menu_launchcuts_open": "เปิด __LAUNCHCUTS__",
 		"menu_quit": "ปิด",
-		"menu_settings": "การตั้งค่า",
 		"menu_update": "ตรวจหาการปรับปรุง ...",
-		"menu_updateShortcuts": "ปรับปรุงทางลัด ...",
-		"menu_updateShortcuts_full": "ครอบ คลุม",
-		"menu_updateShortcuts_quick": "ด่วน",
-		"menu_updateShortcuts_selected": "เลือก",
 		"menu_update_later": "ปรับปรุงในภายหลัง",
 		"menu_update_now": "อัพเดตเดี๋ยวนี้",
-		"prompt_language": "เลือกภาษา:",
-		"prompt_settings": "การตั้งค่า",
-		"prompt_shortcuts": "เลือกทางลัด:",
 		"prompt_update": "รุ่น __APPNAME__ __VERSION__ จะพร้อมใช้งาน คุณต้องการดาวน์โหลดเดี๋ยวนี้หรือไม่\n\nบันทึกย่อประจำรุ่น\n\n__NOTES__",
-		"prompt_updateFull": "สร้างฐานข้อมูลทางลัดใหม่",
-		"prompt_updateShortcuts": "ปรับปรุงฐานข้อมูลของทางลัดใน __LAUNCHCUTS__"
+		"prompt_updateFull": "__LAUNCHCUTS__: การปรับปรุงเต็มรูปแบบ"
 	}
 }
