--- a/localization/zn-HK.json
+++ b/localization/zn-HK.json
@@ -1,34 +1,23 @@
 {
 	"zn-HK": {
-		"alert_about": "此快捷方式喺 __launchcuts__ 生成並更新快捷方式數據庫。",
-		"alert_generate": "將處理 __count__ 快捷方式。 ",
-		"alert_generate_progress": "__PERCENTAGE__% 完成。 __num__ __count__ 快捷方式 __duration__ 秒內處理。",
-		"alert_generate_title": "為 __launchcuts__ 生成快捷方式數據庫",
-		"alert_shortcuts_map": "生成 __count__ 快捷方式的快捷方式數據庫大約需要 __time__ 分鐘才能完成。",
+		"alert_about": "此快捷方式喺 __LAUNCHCUTS__ 生成並更新快捷方式數據庫。",
+		"alert_generate": "將處理 __COUNT__ 快捷方式。 ",
+		"alert_generate_progress": "__PERCENTAGE__% 完成。 __num____COUNT__ 快捷方式 __DURATION__ 秒內處理。",
+		"alert_generate_title": "為 __LAUNCHCUTS__ 生成快捷方式數據庫",
+		"alert_shortcuts_map": "點按 \"確定\" 可生成 __LAUNCHCUTS____COUNT__ 快捷方式的快捷方式數據庫。\n\n對於超過50間快捷方式嘅庫, 進度會以10% 的增量顯示。",
 		"alert_update_none": "你正在運行最新版本的 __appname__。",
 		"label_backup_filename": "快捷方式備份",
 		"language_key": "zn-HK",
 		"language_name": "Chinese Traditional",
 		"menu_about": "關於...",
-		"menu_back": "返回",
 		"menu_help": "幫手...",
-		"menu_language": "更改語言。。。",
 		"menu_launchcuts_get": "__LAUNCHCUTS__...",
-		"menu_launchcuts_open": "打開 __launchcuts__",
+		"menu_launchcuts_open": "打開 __LAUNCHCUTS__",
 		"menu_quit": "退出",
-		"menu_settings": "設置",
 		"menu_update": "檢查更新...",
-		"menu_updateShortcuts": "更新緊快捷方式...",
-		"menu_updateShortcuts_full": "綜合",
-		"menu_updateShortcuts_quick": "快速",
-		"menu_updateShortcuts_selected": "選擇",
 		"menu_update_later": "稍後更新",
 		"menu_update_now": "立即更新。。。",
-		"prompt_language": "選擇語言:",
-		"prompt_settings": "設置",
-		"prompt_shortcuts": "揀快捷方式:",
 		"prompt_update": "__APPNAME__ 版本 __VERSION__ 可用。 你想即刻下載呀?\n\n發行說明\n\n__NOTES__",
-		"prompt_updateFull": "重建快捷方式數據庫",
-		"prompt_updateShortcuts": "更新 __launchcuts__ 快捷方式數據庫。"
+		"prompt_updateFull": "__LAUNCHCUTS__: 完整更新"
 	}
 }
