--- a/localization/fi-FI.json
+++ b/localization/fi-FI.json
@@ -4,31 +4,20 @@
 		"alert_generate": "__COUNT__ pikakuvakkeet käsitellään. ",
 		"alert_generate_progress": "__PERCENTAGE__% valmiina. __NUM__ poissa __COUNT__ pikakuvakkeet on käsitelty __DURATION__ sekunnissa.",
 		"alert_generate_title": "Luodaan pikakuvakkeiden tieto kantaa __LAUNCHCUTS__",
-		"alert_shortcuts_map": "Pikakuvakkeiden tieto kannan luominen __COUNT__ oikoteitä kestää noin __TIME__ minuuttia.",
+		"alert_shortcuts_map": "Luo pikakuvakkeiden tieto kanta __COUNT__ __LAUNCHCUTS__ varten napauttamalla OK.\n\nEdistyminen näkyy 10% kerrallaan kirjastoissa, jotka ovat yli 50 pikakuvakkeet.",
 		"alert_update_none": "Käytössäsi on __APPNAME__ uusin versio.",
 		"label_backup_filename": "oikotiet-varmuus kopiointi",
 		"language_key": "fi-FI",
 		"language_name": "Finnish",
 		"menu_about": "Noin...",
-		"menu_back": "Bck",
 		"menu_help": "Apua...",
-		"menu_language": "Vaihda kieltä...",
 		"menu_launchcuts_get": "Hanki __LAUNCHCUTS__...",
 		"menu_launchcuts_open": "Avata __LAUNCHCUTS__",
 		"menu_quit": "Lopettaa",
-		"menu_settings": "Asetukset",
 		"menu_update": "Tarkista päivitykset...",
-		"menu_updateShortcuts": "Päivitä pikakuvakkeet...",
-		"menu_updateShortcuts_full": "Kattava",
-		"menu_updateShortcuts_quick": "Nopea",
-		"menu_updateShortcuts_selected": "Valittu",
 		"menu_update_later": "Päivitä myöhemmin",
 		"menu_update_now": "Päivitä nyt...",
-		"prompt_language": "Valitse kieli:",
-		"prompt_settings": "Asetukset",
-		"prompt_shortcuts": "Valitse pikanäppäimet:",
 		"prompt_update": "__APPNAME__ versio __VERSION__ on käytettävissä. Haluatko ladata sen nyt?\n\nJulkaisutiedot\n\n__NOTES__",
-		"prompt_updateFull": "Muodosta pikakuvakkeiden tieto kanta uudelleen",
-		"prompt_updateShortcuts": "Päivitä __LAUNCHCUTS__ pikakuvakkeiden tieto kanta."
+		"prompt_updateFull": "__LAUNCHCUTS__: täysi päivitys"
 	}
 }
