--- a/localization/hi-IN.json
+++ b/localization/hi-IN.json
@@ -4,31 +4,20 @@
 		"alert_generate": "__COUNT__ शॉर्टकट की कार्रवाई की जाएगी। ",
 		"alert_generate_progress": "__PERCENTAGE__% पूरा हो गया। __DURATION__ सेकंड में __NUM__ शॉर्टकट __COUNT__ प्रोसेस किया गया है।",
 		"alert_generate_title": "__LAUNCHCUTS__ के लिए शॉर्टकट डाटाबेस पैदा करना",
-		"alert_shortcuts_map": "__COUNT__ शॉर्टकट के शॉर्टकट डाटाबेस को पूरा करने में करीब __TIME__ मिनट लगेंगे ।",
+		"alert_shortcuts_map": "__LAUNCHCUTS__ के लिए __COUNT__ शॉर्टकट का शॉर्टकट डेटाबेस जेनरेट करने के लिए ओके टैप करें।\n\n50 शॉर्टकट से अधिक पुस्तकालयों के लिए 10% वेतन वृद्धि में प्रगति प्रदर्शित की जाएगी।",
 		"alert_update_none": "आप __APPNAME__ का नवीनतम संस्करण चला रहे हैं।",
 		"label_backup_filename": "शॉर्टकट-बैकअप",
 		"language_key": "hi-IN",
 		"language_name": "Hindi",
 		"menu_about": "करीबन...",
-		"menu_back": "वापस",
 		"menu_help": "मदद...",
-		"menu_language": "भाषा बदलें...",
 		"menu_launchcuts_get": "__LAUNCHCUTS__ जाओ...",
 		"menu_launchcuts_open": "__LAUNCHCUTS__ खुला",
 		"menu_quit": "छोड़ना",
-		"menu_settings": "सेटिंग्स",
 		"menu_update": "अपडेट की जांच करें...",
-		"menu_updateShortcuts": "शॉर्टकट अपडेट करें...",
-		"menu_updateShortcuts_full": "व्यापक",
-		"menu_updateShortcuts_quick": "त्वरित",
-		"menu_updateShortcuts_selected": "चयनित",
 		"menu_update_later": "बाद में अपडेट करें",
 		"menu_update_now": "अब अपडेट करो...",
-		"prompt_language": "भाषा चुनें:",
-		"prompt_settings": "सेटिंग्स",
-		"prompt_shortcuts": "शॉर्टकट चुनें:",
 		"prompt_update": "__APPNAME__ संस्करण __VERSION__ उपलब्ध है। क्या आप इसे अब डाउनलोड करना चाहेंगे?\n\nनोट्स जारी करें\n\n__NOTES__",
-		"prompt_updateFull": "शॉर्टकट डाटाबेस का पुनर्निर्माण",
-		"prompt_updateShortcuts": "__LAUNCHCUTS__ में शॉर्टकट के डाटाबेस को अपडेट करें।"
+		"prompt_updateFull": "__LAUNCHCUTS__: पूर्ण अपडेट"
 	}
 }
