Update German and add Taiwanese localizations

--- a/localization/all-localizations.json
+++ b/localization/all-localizations.json
@@ -66,20 +66,30 @@
 		"alert_about": "Diese Verknüpfung generiert und aktualisiert die Shortcuts-Datenbank in __LAUNCHCUTS__.",
 		"alert_generate": "__COUNT__ Verknüpfungen werden verarbeitet. ",
 		"alert_generate_progress": "__PERCENTAGE__% abgeschlossen. __NUM__ von __COUNT__ Verknüpfungen wurden in __DURATION__ Sekunden verarbeitet.",
-		"alert_generate_title": "Generieren von Verknüpfungsdatenbanken für __LAUNCHCUTS__",
-		"alert_shortcuts_map": "Tippen Sie auf OK, um die Verknüpfungsdatenbank mit __COUNT__ Verknüpfungen für __LAUNCHCUTS__ zu generieren.\n\nDer Fortschritt wird in 10%-Schritten für Bibliotheken über 50 Verknüpfungen angezeigt.",
+		"alert_generate_title": "Generieren der Verknüpfungsdatenbank für __LAUNCHCUTS__",
+		"alert_shortcuts_map": "Das Generieren der Verknüpfungsdatenbank für __COUNT__ Verknüpfungen dauert etwa __TIME__ Minuten.",
 		"alert_update_none": "Sie führen die neueste Version von __APPNAME__ aus.",
 		"label_backup_filename": "Shortcuts-Backup",
 		"language_key": "de-DE",
 		"language_name": "Deutsch",
-		"menu_about": "Über...",
-		"menu_help": "Hilfe...",
+		"menu_about": "Über…",
+		"menu_back": "Zurück",
+		"menu_help": "Hilfe…",
+		"menu_language": "Sprache ändern…",
 		"menu_launchcuts_get": "Holen Sie sich __LAUNCHCUTS__...",
-		"menu_launchcuts_open": "Offene __LAUNCHCUTS__",
+		"menu_launchcuts_open": "Öffne __LAUNCHCUTS__",
 		"menu_quit": "Beenden",
-		"menu_update": "Auf Updates suchen...",
-		"menu_update_later": "Aktualisierung später",
-		"menu_update_now": "Jetzt aktualisieren...",
+		"menu_settings": "Einstellungen",
+		"menu_update": "Nach Updates suchen…",
+		"menu_updateShortcuts": "Shortcuts aktualisieren…",
+		"menu_updateShortcuts_full": "Vollständige Aktualisierung",
+		"menu_updateShortcuts_quick": "Schnelle Aktualisierung",
+		"menu_updateShortcuts_selected": "Nur Ausgewählte aktualisieren",
+		"menu_update_later": "Später aktualisieren",
+		"menu_update_now": "Jetzt aktualisieren…",
+		"prompt_language": "Wählen Sie Sprache:",
+		"prompt_settings": "Einstellungen",
+		"prompt_shortcuts": "Wählen Sie die Shortcuts aus:",
 		"prompt_update": "__APPNAME__ Version __VERSION__ ist verfügbar. Möchten Sie es jetzt herunterladen?\n\nVersionshinweise\n\n__NOTES__",
 		"prompt_updateFull": "__LAUNCHCUTS__: Vollständiges Update"
 	},
@@ -544,6 +554,27 @@
 		"menu_update_now": "Şimdi Güncelleştir...",
 		"prompt_update": "__APPNAME__ için __VERSION__ sürümü mevcuttur. Şimdi indirmek ister misiniz?\n\nSürüm Notları\n\n__NOTES__",
 		"prompt_updateFull": "Kestimeler Veritabanını Yeniden Oluşturma"
+	},
+	"zh-TW": {
+		"alert_about": "這個捷徑會產生並更新__LAUNCHCUTS__中的捷徑資料庫.",
+		"alert_generate": "__COUNT__個捷徑會被處理",
+		"alert_generate_progress": "__PERCENTAGE__%已完成. 過去的__DURATION__秒中已處理__COUNT__個中的__NUM__個捷徑",
+		"alert_generate_title": "正在為__LAUNCHCUTS__產生捷徑資料庫",
+		"alert_shortcuts_map": "點擊 OK 來產生__COUNT__個捷徑的__LAUNCHCUTS__捷徑資料庫.\n\n超過50個捷徑的資料庫將會以10%為單位顯示進度條",
+		"alert_update_none": "您正在執行最新版本的__APPNAME__.",
+		"label_backup_filename": "捷徑備份",
+		"language_key": "zh-TW",
+		"language_name": "中文 (台灣)",
+		"menu_about": "關於...",
+		"menu_help": "幫助...",
+		"menu_launchcuts_get": "取得__LAUNCHCUTS__...",
+		"menu_launchcuts_open": "開啟__LAUNCHCUTS__...",
+		"menu_quit": "結束",
+		"menu_update": "檢查更新...",
+		"menu_update_later": "待會更新",
+		"menu_update_now": "現在更新...",
+		"prompt_update": "__VERSION__版的__APPNAME__ 已可下載，您想要現在下載嗎？\n\n更新日誌\n\n__NOTES__",
+		"prompt_updateFull": "__LAUNCHCUTS__：完整更新"
 	},
 	"zn-CH": {
 		"alert_about": "此快捷方式在 __LAUNCHCUTS__ 生成并更新快捷方式数据库。",
